[package]
name = "pyxet"
version = "0.1.2-rc1"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pyxet"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module", "abi3-py37", "generate-import-lib"] }
xetblob = { git = "https://github.com/xetdata/xet-core" }
gitxetcore = { git = "https://github.com/xetdata/xet-core" }
tempfile = "3.2.0"
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
libc = "0.2"
url = "2.3.1"
tracing = "0.1.*"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
thiserror = "1.0.30"
anyhow = "1"

[build-dependencies]
pyo3-build-config = "0.18.0"
cc = "1.0"
